Fix blog titles in dark mode

--- a/site/assets/css/fish_style.css
+++ b/site/assets/css/fish_style.css
@@ -730,6 +730,10 @@ input.tabselector {
     .download_tab > div {
         border: solid #888 1px;
     }
+
+    .post_list li, .post_title {
+        color: #AAA;
+    }
 }
 
 #tab1:checked ~ ul.nav-tabs li label.tab1,
